--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,24 @@
-* {
+#p1::before{
+	content: "Przed elementem ";
+	color: green;
+	text-decoration: overline;
+}
+
+#p2::after {
+	content: " Za elementem";
+	color: red;
+	text-decoration: underline;
+}
+
+#p3::first-letter {
 	color: blue;
+	text-transform: uppercase;
+}
+
+#p4::first-line {
+	background-color: aqua;
+}
+
+p::selection {
+	background-color: crimson;
 }
